[package]
name = "spl-soul"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_soul"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[features]
default = []
cpi = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
solana-program = { version = "2.1.14" }
solana-zk-sdk = { version = "2.1.0", features = ["no-entrypoint"], dependencies = ["solana-program = '2.1.14'"] }